maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: Unmatched closing brace '}' ignored here
}
^Escaper:14: error: expected class or object definition
def talahaine() {
^Escaper:24: error: expected start of definition
override def run() {
         ^